# transmogrify

./: .gitignore  README.md  meson.build
include/: lisp.h  transmogrify.h
src/: lisp.c  main.c  transmogrify.c
subprojects/fe/: meson.build
subprojects/pikchr/: meson.build
subprojects/xxhash/: meson.build
tests/: meson.build  transmogrify_test.c
user_manual/: user_manual.md  user_manual.tex
